--- a/Halloapp/tr.lproj/Localizable.strings
+++ b/Halloapp/tr.lproj/Localizable.strings
@@ -616,6 +616,9 @@
 /* Header for the list of all contacts on HallAapp. */
 "feed.privacy.list.all.details" = "HalloApp kişilerim";
 
+/* Button to dismiss edit favorites modal */
+"feed.privacy.list.dismiss.edit.favorites" = "Şimdi değil";
+
 /* Settings > Privacy > Posts: one of the possible setting values. */
 "feed.privacy.list.except" = "... hariç kişilerim";
 
@@ -639,6 +642,12 @@
 
 /* Description of the alert shown to user indicating their post is only shown to their favorites audience */
 "feed.privacy.list.own.only.description" = "Yalnızca Yakınlar listendekiler bu gönderiyi görebilir.";
+
+/* Button to edit favorites */
+"feed.privacy.list.set.favorites" = "Yakınlar listesini ayarla";
+
+/* Description of the new Favorites functionality. */
+"feed.privacy.list.set.favorites.description" = "Şimdi Yakınlar listeni oluşturabilir ve HalloApp gönderilerini listedekilerle paylaşabilirsin.";
 
 /* Possible Feed Privacy setting value. */
 "feed.privacy.value.my.contacts" = "Kişilerim";
