--- a/Halloapp/ar.lproj/Localizable.strings
+++ b/Halloapp/ar.lproj/Localizable.strings
@@ -82,6 +82,9 @@
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "المتابعة";
 
+/* Title for generic copy URL button */
+"button.copy.link" = "نسخ الرابط";
+
 /* Title for generic Create button */
 "button.create" = "إنشاء";
 
@@ -232,8 +235,14 @@
 /* No comment provided by engineer. */
 "camera.init.error.8" = "يتعذر تسجيل الفيديو";
 
+/* No comment provided by engineer. */
+"camera.init.error.9" = "يتعذر تسجيل الصوت";
+
 /* Title for a popup alerting about camera initialization error. */
 "camera.init.error.title" = "خطأ في التشغيل";
+
+/* Title of the button that allows camera permissions. */
+"camera.permission.allow.access" = "السماح بالوصول";
 
 /* No comment provided by engineer. */
 "Cancel" = "إلغاء";
@@ -335,7 +344,7 @@
 "chat.message.photo" = "صورة";
 
 /* Text shown when content input text field is empty for chat screens. */
-"chat.message.placeholder" = "اكتب رسالة";
+"chat.message.placeholder" = "رسالة جديدة";
 
 /* Text shown in place of a received message we are not able to process yet. */
 "chat.message.unsupported" = "لا يدعم إصدار هالوآب الذي تستخدمه نوع الرسائل هذا.";
@@ -454,6 +463,9 @@
 /* Composer New Message title. */
 "composer.message.title" = "رسالة جديدة";
 
+/* Composer New Moment Post title. */
+"composer.moment.post.title" = "لحظة جديدة";
+
 /* Placeholder text for media caption field in post composer. */
 "composer.placeholder.media.description" = "اكتب وصفًا";
 
@@ -544,6 +556,9 @@
 /* Label for floating compose post menu on Group screen. */
 "fab.post.button" = "منشور";
 
+/* Indicates that an item has failed to be sent. */
+"failed.to.send" = "تعذّر الإرسال";
+
 /* Text shown in place of a received post we are not able to decrypt yet. */
 "feed.comment.waiting" = "بانتظار هذا التعليق. قد يستغرق الأمر بعض الوقت.";
 
@@ -555,6 +570,12 @@
 
 /* Text for group feed notification displayed in Activity Center. */
 "feed.group.notification.other.comment.w.text" = "تعليق <$author$>: ‏<$text$>";
+
+/* Text for home feed notification displayed in Activity Center. */
+"feed.home.notification.other.comment.no.text" = "تعليق من <$author$>";
+
+/* Text for home feed notification displayed in Activity Center. */
+"feed.home.notification.other.comment.w.text" = "تعليق <$author$>: ‏<$text$>";
 
 /* Text shown in indicator when new posts come in while user is scrolled down */
 "feed.new.posts.indicator" = "منشورات جديدة";
@@ -911,7 +932,7 @@
 "invite.please.wait" = "يُرجى الانتظار...";
 
 /* Text of invitation to join HalloApp. */
-"invite.text" = "يمكنك الانضمام مع إلى هالوآب، وهو تطبيق بسيط ويتمتع بالخصوصية والأمان يتيح لك التواصل مع الأصدقاء والعائلة. يمكنك تنزيله من https://halloapp.com/dl";
+"invite.text" = "يمكنك الانضمام معي إلى هالوآب، وهو تطبيق بسيط ويتمتع بالخصوصية والأمان يتيح لك التواصل مع الأصدقاء والعائلة. يمكنك تنزيله من https://halloapp.com/dl";
 
 /* Text of invitation to join HalloApp. First argument is the invitee's name, second argument is their phone number. */
 "invite.text.specific" = "مرحبًا %1$@، هذه دعوة مني لتنضم إليّ في استخدام هالوآب - وهو عبارة عن شبكة للعلاقات الفعلية بين الأشخاص المقربين. استخدم %2$@ للتسجيل في التطبيق. يمكنك تنزيله من https://halloapp.com/dl";
@@ -924,6 +945,9 @@
 
 /* Version of an invitation to join HalloApp. */
 "invite.text.specific.3" = "هذه دعوة مني لتثبيت هالوآب. يمكنك تنزيله مجانًا من هنا: https://halloapp.com/free";
+
+/* Version of an invitation to join HalloApp. The argument is the invitee's name. */
+"invite.text.specific.4" = "مرحبًا %@! يمكنك الانضمام معي إلى هالوآب، ومشاركة اللحظات الحقيقية مع الأصدقاء الفعليين. تجربة التطبيق من هنا: https://halloapp.com/new";
 
 /* Title for the screen that allows to select contact to invite. */
 "invite.title" = "دعوة الأصدقاء";
@@ -1033,6 +1057,15 @@
 /* Text on loading screen while migrating data */
 "migration.inProgress" = "جارٍ تحسين البيانات...";
 
+/* For indicating that there was an error while uploading the post. */
+"moment.uploading.failure" = "خطأ";
+
+/* For indicating that a post is uploading. */
+"moment.uploading.progress" = "جارٍ التحميل...";
+
+/* For indicating that a post has been successfully uploaded and shared. */
+"moment.uploading.success" = "تمت المشاركة!";
+
 /* One of the contact actions in My Post screen. Verb. */
 "mypost.action.message" = "رسالة";
 
@@ -1092,6 +1125,9 @@
 
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ قبل دعوتك للانضمام إلى هالوآب 🎉";
+
+/* New moment notification text to be shown to the user. */
+"notification.moment" = "لحظة جديدة";
 
 /* New post notification text when post is multiple photos without caption. */
 "notification.n.photos" = "notification.n.photos";
@@ -1156,6 +1192,12 @@
 /* Text for new user popup pointing at new post button */
 "nux.new.post.button" = "انقر هنا لمشاركة تحديث مع أصدقائك وعائلتك على هالوآب";
 
+/* Title of the button that opens the camera. */
+"open.camera" = "فتح الكاميرا";
+
+/* Text that indicates an open action. */
+"open.title" = "فتح";
+
 /* Message in media picker when access is denied. */
 "picker.access.denied.message" = "يُرجى منح إذن الوصول من الإعدادات";
 
@@ -1219,6 +1261,9 @@
 /* Error banner displayed when there is a failure syncing preivacy settings, displayed on the privacy view */
 "privacy.sync.failure" = "تعذّرت مزامنة إعدادات الخصوصية. يُرجى إعادة المحاولة لاحقًا.";
 
+/* Placeholder text for the text field for private replies. The argument is the first name of the contact. */
+"private.reply.placeholder" = "الرد على %@";
+
 /* Title for the button allowing to delete current profile photo. */
 "profile.delete.photo" = "حذف الصورة";
 
@@ -1233,6 +1278,9 @@
 
 /* Text for unblocking user under profile header */
 "profile.header.unblock.user" = "رفع الحظر";
+
+/* This is a verb.  The text is clickable, under a contact name and starts a video call with that contact. It should not be translated as a noun. */
+"profile.header.video.call.user" = "مكالمة فيديو";
 
 /* Item in Profile > Calls screen. */
 "profile.help.calls" = "المكالمات";
@@ -1366,8 +1414,17 @@
 /* Text shown to instruct using a QR code for joining a group */
 "scan.to.join.group.using.qr.code" = "للانضمام، يمكنك مسح رمز الاستجابة السريعة هذا بكاميرا الهاتف.";
 
+/* Text placed on the blurred overlay of a secret post. */
+"secret.post.entice" = "شارَك %@ إحدى اللحظات";
+
 /* Message that pops up when user attempts to save an empty contact list */
 "select.at.least.one.contact" = "يُرجى تحديد جهة اتصال واحدة على الأقل.";
+
+/* Indicates that an item is in the process of being sent. */
+"sending.title" = "جارٍ الإرسال";
+
+/* Indicates that an item has successfully been sent. */
+"sent.title" = "تم الإرسال";
 
 /* body of the marketing alert sent to users */
 "server.marketing.body" = "أرسل دعوات للأصدقاء للاستمتاع بتطبيق هالوآب!";
@@ -1513,6 +1570,12 @@
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "انضم إلى شبكة العلاقات الفعلية الخاصة بي على هالوآب. قم بتنزيل التطبيق مجانًا من halloapp.com/dl";
 
+/* Alert that tells the user to allow camera access to share a moment. */
+"share.moment.camera.permission" = "السماح بالوصول إلى الكاميرا لمشاركة إحدى اللحظات";
+
+/* Prompt for the user to share a moment. */
+"share.moment.prompt" = "مشاركة إحدى اللحظات";
+
 /* Label for call bar (shows at top of screen during active call). Returns user to call screen when tapped. */
 "tap.return.call" = "انقر للعودة إلى المكالمة";
 
@@ -1635,6 +1698,9 @@
 
 /* Informational label that's shown in the banner for an unknown contact when they message the user for the first time */
 "unknown.contact.not.in.contact.book" = "هذا المُرسِل ليس ضمن قائمة جهات اتصالك.";
+
+/* Text that indicates the unlock action for a moment. */
+"unlock.title" = "رفع الحظر";
 
 /* Alert appearing after clicking an external share link that failed to load */
 "urlrouter.externalShare.failed" = "تعذّر تحميل المنشور";
