--- a/Halloapp/es.lproj/Localizable.strings
+++ b/Halloapp/es.lproj/Localizable.strings
@@ -556,6 +556,9 @@
 /* Label for floating compose post menu on Group screen. */
 "fab.post.button" = "Publicación";
 
+/* Indicates that an item has failed to be sent. */
+"failed.to.send" = "Error en el envío";
+
 /* Text shown in place of a received post we are not able to decrypt yet. */
 "feed.comment.waiting" = "Esperando por el comentario. Esto puede demorar un poco.";
 
@@ -567,6 +570,12 @@
 
 /* Text for group feed notification displayed in Activity Center. */
 "feed.group.notification.other.comment.w.text" = "<$author$> comentó: <$text$>";
+
+/* Text for home feed notification displayed in Activity Center. */
+"feed.home.notification.other.comment.no.text" = "<$author$> comentó";
+
+/* Text for home feed notification displayed in Activity Center. */
+"feed.home.notification.other.comment.w.text" = "<$author$> comentó: <$text$>";
 
 /* Text shown in indicator when new posts come in while user is scrolled down */
 "feed.new.posts.indicator" = "Nuevas publicaciones";
@@ -1252,6 +1261,9 @@
 /* Error banner displayed when there is a failure syncing preivacy settings, displayed on the privacy view */
 "privacy.sync.failure" = "No se pudo sincronizar la configuración de privacidad. Por favor, inténtalo más tarde.";
 
+/* Placeholder text for the text field for private replies. The argument is the first name of the contact. */
+"private.reply.placeholder" = "Responder a %@";
+
 /* Title for the button allowing to delete current profile photo. */
 "profile.delete.photo" = "Eliminar foto";
 
@@ -1407,6 +1419,12 @@
 
 /* Message that pops up when user attempts to save an empty contact list */
 "select.at.least.one.contact" = "Por favor, selecciona al menos un contacto.";
+
+/* Indicates that an item is in the process of being sent. */
+"sending.title" = "Enviando";
+
+/* Indicates that an item has successfully been sent. */
+"sent.title" = "Enviado";
 
 /* body of the marketing alert sent to users */
 "server.marketing.body" = "¡Invita a tus amigos para que disfruten de HalloApp!";
@@ -1680,6 +1698,9 @@
 
 /* Informational label that's shown in the banner for an unknown contact when they message the user for the first time */
 "unknown.contact.not.in.contact.book" = "Este remitente no está en tu lista de contactos";
+
+/* Text that indicates the unlock action for a moment. */
+"unlock.title" = "Desbloquear";
 
 /* Alert appearing after clicking an external share link that failed to load */
 "urlrouter.externalShare.failed" = "Error al cargar la publicación";
