--- a/Share Extension/cs.lproj/Localizable.strings
+++ b/Share Extension/cs.lproj/Localizable.strings
@@ -19,6 +19,9 @@
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "Pokračovat";
 
+/* Title for generic copy URL button */
+"button.copy.link" = "Kopírovat odkaz";
+
 /* Title for generic Create button */
 "button.create" = "Vytvořit";
 
@@ -85,6 +88,27 @@
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.only" = "Sdílet pouze s vybranými kontakty";
 
+/* Button to dismiss edit favorites modal */
+"feed.privacy.list.dismiss.edit.favorites" = "Teď ne";
+
+/* Description of the alert shown to user indicating the author's post is only shown to the author's favorites audience */
+"feed.privacy.list.notOwn.only.description" = "Tento příspěvek si mohou zobrazit pouze lidé v seznamu oblíbených uživatele %@.";
+
+/* Header for the favorites list when editing contacts to share with. */
+"feed.privacy.list.only.details" = "Kdo uvidí tento příspěvek";
+
+/* Title of the alert shown to user indicating their post is only shown to their favorites audience */
+"feed.privacy.list.only.title" = "Oblíbení";
+
+/* Description of the alert shown to user indicating their post is only shown to their favorites audience */
+"feed.privacy.list.own.only.description" = "Tento příspěvek mohou zobrazit pouze lidé z vašeho seznamu oblíbených.";
+
+/* Button to edit favorites */
+"feed.privacy.list.set.favorites" = "Nastavit Oblíbené";
+
+/* Description of the new Favorites functionality. */
+"feed.privacy.list.set.favorites.description" = "Nyní si můžeš vytvořit seznam svých oblíbených kontaktů a sdílet s nimi své příspěvky v aplikaci HalloApp.";
+
 /* Generic label for search, mostly used as placeholder text for searchbar */
 "label.search" = "Hledat";
 
@@ -100,8 +124,38 @@
 /* Button title. Refers to discarding photo/video edits in media composer. */
 "media.button.discard" = "Zahodit";
 
+/* Button title. Refers to resetting photo / video to original version. */
+"media.button.reset" = "Resetovat";
+
+/* Button title. Refers to undoing an edit of a photo. */
+"media.button.undo" = "Zrušit";
+
+/* Confirmation prompt in media composer. */
+"media.discard.confirmation" = "Chceš se zbavit svých úprav?";
+
+/* Accessibility label for a button in media editor. Refers to media editing action. */
+"media.voiceover.button.annotate" = "Anotovat";
+
+/* Accessibility label for X (Close) button in media editor. */
+"media.voiceover.button.close" = "Zavřít";
+
+/* Accessibility label for a button in media editor. Refers to media editing action. */
+"media.voiceover.button.draw" = "Přetáhnout";
+
+/* Accessibility label for a button in media editor. Refers to media editing action. */
+"media.voiceover.button.flip" = "Převrátit";
+
+/* Accessibility label for a button in media editor. Refers to media editing action. */
+"media.voiceover.button.mute" = "Ztišit";
+
+/* Accessibility label for a button in media editor. Refers to media editing action. */
+"media.voiceover.button.rotate" = "Otočit";
+
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "Připojte se k mé síti skutečných vztahů v aplikaci HalloApp. Můžete si ji stáhnout zdarma na adrese halloapp.com/dl";
+
+/* Title on edit button */
+"share.composer.button.edit" = "Upravit";
 
 /* Label above the list with whom you share */
 "share.composer.destinations.label" = "Sdílet s";
@@ -126,7 +180,14 @@
 
 /* Share on the home feed label with all my contacts
    Share to all contacts */
-"share.destination.home" = "Domů";
+"share.destination.home" = "Moje kontakty";
+
+/* Alert title when a direct to contact sharing is missing
+   Alert title when a direct to group sharing is missing */
+"share.destination.missing.group" = "Chybějící skupina %@";
+
+/* Show more groups in the share group selection */
+"share.destination.more" = "Zobrazit více...";
 
 /* Share on the home feed selection cell */
 "share.destination.new" = "Nový příspěvek";
@@ -139,6 +200,9 @@
 
 /* Title of alert when user is not logged in */
 "share.notlogged.title" = "Nejste přihlášeni";
+
+/* Button to edit favorites list */
+"title.edit.favorites" = "Upravit seznam Oblíbených";
 
 /* Row in Settings screen */
 "title.privacy" = "Soukromí";
